hphp/hack/test/typecheck/switch_case_terminality1.php.exp
File "switch_case_terminality1.php", line 20, characters 10-11:
Invalid return type (Typing[4110])
File "switch_case_terminality1.php", line 12, characters 32-34:
This is an int
File "switch_case_terminality1.php", line 12, characters 14-17:
It is incompatible with a nullable type
